<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/img_dashbord">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">
        <Space
            android:id="@+id/space_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <ImageView
            android:id="@+id/top_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_below="@id/space_1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>
        <Space
            android:id="@+id/space_2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/top_logo"/>

        <TextView
            android:id="@+id/to_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/space_2"
            android:layout_centerHorizontal="true"
            android:text="@string/please_regist"
            android:textSize="11sp"
            app:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.8"
            app:fontFamily="sans-serif"
            android:layout_below="@id/to_reg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/f_name"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.8"
            app:fontFamily="sans-serif"
            android:layout_below="@id/fName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/l_name"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/edtEmail_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.8"
            app:fontFamily="sans-serif"
            android:layout_below="@id/lName"
            android:drawableLeft="@drawable/ic_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/edtPass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.8"
            app:fontFamily="sans-serif"
            android:layout_below="@id/edtEmail_reg"
            android:drawableLeft="@drawable/ic_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/edt_cnf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.8"
            app:fontFamily="sans-serif"
            android:drawableLeft="@drawable/ic_password"
            android:layout_below="@id/edtPass_reg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/cnf_pass"
            android:singleLine="true"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimaryDark"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/chkTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:layout_below="@id/edt_cnf_pass"
            android:layout_alignStart="@id/edt_cnf_pass"
            android:layout_marginTop="20dp"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="5dp"
            android:textColor="@color/text_color"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:layout_below="@id/chkTerm"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_button"
            android:textColor="#FFFFFF"
            android:text="@string/registration"
            android:textSize="15dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegist"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/already_account"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="10dp"
                tools:targetApi="jelly_bean" />
            <TextView
                android:id="@+id/SignIn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                android:layout_toRightOf="@id/textView3"
                android:textColor="@color/btn_bg"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
</LinearLayout>
