<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_dashbord"
    android:orientation="vertical">

    <Space
        android:id="@+id/space_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_below="@id/space_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/tv_top"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:fontFamily="sans-serif"
        android:textColor="@color/text_color"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_below="@id/top_logo"
        android:text="@string/reset_password"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        app:fontFamily="sans-serif"
        android:scaleY="0.8"
        android:drawableLeft="@drawable/ic_email"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:fontFamily="sans-serif"
        android:layout_below="@id/edtEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_forgot"
        android:background="@drawable/selector_button"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_below="@id/btnSend"
        android:layout_centerHorizontal="true"
        android:text=""/>



</RelativeLayout>
    <!-- From: file:/home/webwerks/Project/skinExam_latest/skinexam-android/app/src/main/res/layout/activity_forget_password.xml -->